# advanced-text-processing

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SEMANTIC_MATCHING_README.md  demo_new_features.py  demo_semantic_matching.py  pyproject.toml  quick_test.py  requirements-dev.txt  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: API.md  ARCHITECTURE.md  INSTALLATION.md  PUBLISHING.md
examples/: aliases_example.py  canonicalization_example.py  full_workflow_example.py  mode_a_example.py  mode_a_example_no_semantic.py  mode_b_example.py  ner_example.py
gv/: pyvenv.cfg
ner_lib/: __init__.py  config.py  resolver.py
ner_lib/aliases/: __init__.py  alias_retrieval.py  synonym_provider.py  wikidata_client.py
ner_lib/candidate_generation/: __init__.py  ann_faiss.py  ann_hnswlib.py  blocking.py  exact_lookup.py
ner_lib/canonicalization/: __init__.py  entity_canonicalization.py  property_canonicalization.py  relationship_canonicalization.py  semantic_matcher.py
ner_lib/models/: __init__.py  candidate.py  entity.py
ner_lib/modes/: __init__.py  mode_a.py  mode_b.py
ner_lib/normalization/: __init__.py  text.py
ner_lib/recognition/: __init__.py  recognition.py
ner_lib/scoring/: __init__.py  aggregation.py
ner_lib/signals/: __init__.py  acronym.py  contextual.py  deterministic.py  semantic.py  string_similarity.py
ner_lib/storage/: __init__.py  interface.py  memory.py
ner_lib/utils/: __init__.py  citations.py  nlp.py
tests/: test_aliases.py  test_basic.py  test_canonicalization.py  test_integration.py  test_recognition.py
