[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advanced-text-processing"
version = "0.2.0"
description = "A powerful Named Entity Recognition and Resolution library with semantic matching"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Gaurav Dadhich"}
]
keywords = [
    "ner",
    "named-entity-recognition",
    "entity-resolution",
    "nlp",
    "semantic-matching",
    "canonicalization",
    "wikidata",
    "wordnet",
    "entity-linking",
    "text-processing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    "spacy>=3.7.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "spacy-wordnet>=0.1.0",
    "nltk>=3.8.0",
    "requests>=2.31.0",
    "requests-ratelimiter>=0.4.0",
    "cachetools>=5.3.0",
    "faiss-cpu>=1.7.4",
    "hnswlib>=0.7.0",
    "rapidfuzz>=3.0.0",
    "jellyfish>=1.0.0",
    "dedupe>=2.0.0",
    "recordlinkage>=0.15.0",
    "flashtext>=2.7",
    "autofaiss>=2.17.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.4.0",
    "isort>=5.12.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
all = [
    "advanced-text-processing[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/dadhichgaurav1/advanced-text-processing"
Documentation = "https://github.com/dadhichgaurav1/advanced-text-processing#readme"
Repository = "https://github.com/dadhichgaurav1/advanced-text-processing"
Issues = "https://github.com/dadhichgaurav1/advanced-text-processing/issues"
Changelog = "https://github.com/dadhichgaurav1/advanced-text-processing/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["ner_lib"]

[tool.setuptools.package-data]
ner_lib = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=ner_lib --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
